--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,14 @@ h1 {
   font-size: 8rem;
   color: #4ECCA3;
 }
+a {
+  margin: 0px;
+  font-family: 'Lobster', cursive;
+  text-shadow: 5px 0 #232931;
+  text-decoration:none;
+  font-size: 1rem;
+  color: #4ECCA3;
+}
 
 p {
   font-size: 2rem;
